# neopilot

./: .gitignore  Descricao_NeoPilot_PRD.md  Dockerfile  PRD_NeoPilot_v1.0.md  PRD_NeoPilot_v2.0.md  README.md  docker-compose.v2.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: __init__.py  session.py  websocket.py
backend/app/models/: schemas.py  session.py
backend/app/services/: __init__.py  claude_client.py  session_manager.py  tool_registry.py
client/: __init__.py  aci.py  capture.py  main.py  overlay.py  ws_client.py
config/: default.yaml
src/neopilot/: __init__.py  cli.py
src/neopilot/agents/: cad_agent.py  desktop_agent.py  input_controller.py  web_agent.py
src/neopilot/core/: agent_graph.py  config.py  logger.py
src/neopilot/integrations/libreoffice/: lo_agent.py
src/neopilot/memory/: __init__.py  manager.py
src/neopilot/perception/: accessibility.py  context_builder.py  screen_capture.py  visual_grounder.py
src/neopilot/security/: __init__.py  enterprise_policy.py  sandbox.py  vault.py
src/neopilot/ui/: __init__.py  floating_window.py  professor_dashboard.py
src/neopilot/voice/: __init__.py  stt.py  tts.py
tests/integration/: test_orchestrator.py
tests/unit/: test_claude_client.py  test_config.py  test_enterprise_policy.py  test_lo_agent.py  test_memory.py  test_security_vault.py  test_session_api.py  test_tool_registry.py
